@@ -4,21 +4,39 @@ import java.util.Arrays;
 import java.util.List;
 
 public enum AnimalType {
-    CHICKEN(Arrays.asList(AnimalProductType.CHICKEN_EGG, AnimalProductType.LARGE_CHICKEN_EGG), true),
-    DUCK(Arrays.asList(AnimalProductType.DUCK_EGG, AnimalProductType.DUCK_FEATHER), true),
-    RABBIT(Arrays.asList(AnimalProductType.RABBIT_WOOL, AnimalProductType.RABBIT_FOOT), true),
-    DINOSAUR(Arrays.asList(AnimalProductType.DINOSAUR_EGG), true),
-    COW(Arrays.asList(AnimalProductType.COW_MILK, AnimalProductType.LARGE_COW_MILK), false),
-    GOAT(Arrays.asList(AnimalProductType.GOAT_MILK, AnimalProductType.LARGE_GOAT_MILK), false),
-    SHEEP(Arrays.asList(AnimalProductType.WOOL), false),
-    PIG(Arrays.asList(AnimalProductType.TRUFFLE), false);
+    CHICKEN("Chicken", Arrays.asList(AnimalProductType.CHICKEN_EGG, AnimalProductType.LARGE_CHICKEN_EGG), true,
+            Arrays.asList(FarmBuildingType.COOP, FarmBuildingType.BIG_COOP, FarmBuildingType.DELUXE_COOP), 800),
+    DUCK("Duck", Arrays.asList(AnimalProductType.DUCK_EGG, AnimalProductType.DUCK_FEATHER), true,
+            Arrays.asList(FarmBuildingType.BIG_COOP, FarmBuildingType.DELUXE_COOP), 1200),
+    RABBIT("Rabbit", Arrays.asList(AnimalProductType.RABBIT_WOOL, AnimalProductType.RABBIT_FOOT), true,
+            List.of(FarmBuildingType.DELUXE_COOP), 8000),
+    DINOSAUR("Dinosaur", List.of(AnimalProductType.DINOSAUR_EGG), true,
+            List.of(FarmBuildingType.BIG_COOP), 14000),
+    COW("Cow", Arrays.asList(AnimalProductType.COW_MILK, AnimalProductType.LARGE_COW_MILK), false,
+            Arrays.asList(FarmBuildingType.BARN, FarmBuildingType.BIG_BARN, FarmBuildingType.DELUXE_BARN), 1500),
+    GOAT("Goat", Arrays.asList(AnimalProductType.GOAT_MILK, AnimalProductType.LARGE_GOAT_MILK), false,
+            Arrays.asList(FarmBuildingType.BIG_BARN, FarmBuildingType.DELUXE_BARN), 4000),
+    SHEEP("Sheep", Arrays.asList(AnimalProductType.WOOL), false,
+            List.of(FarmBuildingType.DELUXE_BARN), 8000),
+    PIG("Pig", Arrays.asList(AnimalProductType.TRUFFLE), false,
+            List.of(FarmBuildingType.DELUXE_BARN), 16000);
 
+    private final String name;
     private final List<AnimalProductType> animalProducts;
     private final boolean livesInCage;
+    private final List<FarmBuildingType> livingSpaceTypes;
+    private final int price;
 
-    AnimalType(List<AnimalProductType> animalProducts, boolean livesInCage) {
+    AnimalType(String name, List<AnimalProductType> animalProducts, boolean livesInCage, List<FarmBuildingType> livingSpaceTypes, int price) {
+        this.name = name;
         this.animalProducts = animalProducts;
         this.livesInCage = livesInCage;
+        this.livingSpaceTypes = livingSpaceTypes;
+        this.price = price;
+    }
+
+    public String getName() {
+        return name;
     }
 
     public List<AnimalProductType> getAnimalProducts() {
@@ -27,5 +45,13 @@ public enum AnimalType {
 
     public boolean livesInCage() {
         return livesInCage;
+    }
+
+    public List<FarmBuildingType> getLivingSpaceTypes() {
+        return livingSpaceTypes;
+    }
+
+    public int getPrice() {
+        return price;
     }
 }
